--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -42,14 +42,14 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
                 <small class="text-muted ml-2">
-                    <a href="{{ url_for('reset_request') }}">Forgot your password?</a>
+                    <a href="{{ url_for('users.reset_request') }}">Forgot your password?</a>
                 </small>
             </div>
         </form>
     </div>
 <div class="border-top pt-3 pb-3">
     <small class="text-muted">
-        Need an account? <a class="ml-2" href="{{ url_for('register') }}">Register</a>
+        Need an account? <a class="ml-2" href="{{ url_for('users.register') }}">Register</a>
     </small>
 </div>
 {% endblock content %}
